# RoverSimulation

./: .gitignore  README.md
Simulations/: README.md
Simulations/src/rover_simulation/rover_description/: README.md
Simulations/src/rover_simulation/rover_description/config/: steering_controller_velocity.yaml
Simulations/src/rover_simulation/rover_description/urdf/: inertia_parameters_macro.xacro  plugin_skid_steer_macro.xacro  robosense_bpearl.xacro  rover_macro.xacro  skid_steer_drive.xacro  tf_description.xacro  wheel_rps_controller_macro.xacro
Simulations/src/rover_simulation/rover_simulation_control/: setup.cfg  setup.py
Simulations/src/rover_simulation/rover_simulation_control/launch/: digital_twin_launch.py  display_rviz_launch.py  rover_world_launch.py  spawn_rover_launch.py  spawn_skid_steer_launch.py  test_launch.py
Simulations/src/rover_simulation/rover_simulation_control/models/rover_plane/: model.config
Simulations/src/rover_simulation/rover_simulation_control/models/rover_road/: model.config  model.sdf
Simulations/src/rover_simulation/rover_simulation_control/rover_simulation_control/: digital_twin_node.py  rps_publisher_class.py
src/rover_simulation/rover_description/: package.xml  setup.py
src/rover_simulation/rover_description/launch/: display_rviz_launch.py
src/rover_simulation/rover_description/models/rover/: model.config  model.sdf
src/rover_simulation/rover_description/urdf/: README.md  intelrealsense_t265.xacro  materials.xacro  properties.xacro  robosense_rs_16.xacro  test_.xacro  wheel_rps_controller_drive.xacro
src/rover_simulation/rover_simulation/: CMakeLists.txt  package.xml
src/rover_simulation/rover_simulation_control/: README.md  package.xml
src/rover_simulation/rover_simulation_control/launch/: gazebo_cmd_ddrive_setup_launch.py  gazebo_cmd_kmodel_setup_launch.py  spawn_rps_drive_rover_launch.py
src/rover_simulation/rover_simulation_control/models/rover_plane/: model.sdf
src/rover_simulation/rover_simulation_control/rover_simulation_control/: cmd_publisher_class.py  cmd_publisher_controller.py  rps_publisher_controller.py  test_rover.py
src/rover_simulation/rover_simulation_control/worlds/: rover_world.world
