<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_description</name>
  <version>0.0.0</version>
  <description>TODO: This package contains the description for 4 wheel rover robot</description>
  <maintainer email="muhammadmursaleen09@gmail.com">muhammad mursaleen</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>xacro</depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
