<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="muhammadmursaleen09@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>rover_description</exec_depend>
  <exec_depend>rover_simulation_control</exec_depend>
  <exec_depend>direct_drive_interface</exec_depend>
  <exec_depend>kinematic_model_interface</exec_depend>
  <exec_depend>remote_joystick_control</exec_depend>
  <exec_depend>rover_custom_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
